clean up a bunch of todos from Ch 1

--- a/main.bib
+++ b/main.bib
@@ -50,6 +50,17 @@ MRREVIEWER = {E. Dyer},
 MRREVIEWER = {Stewart B. Priddy},
 }
 
+@article{AdamsVFoS,
+  title={Vector fields on spheres},
+  author={Adams, J Frank},
+  journal={Topology},
+  volume={1},
+  number={1},
+  pages={63--65},
+  year={1962},
+  publisher={Elsevier}
+}
+
 @article {AdamsPriddy,
     AUTHOR = {Adams, J. F. and Priddy, S. B.},
      TITLE = {Uniqueness of {$B{\rm SO}$}},
@@ -1559,6 +1570,14 @@ MRREVIEWER = {Andrzej Kozlowski},
 MRREVIEWER = {Ian Hambleton},
        DOI = {10.1090/cbms/091},
        URL = {http://dx.doi.org/10.1090/cbms/091},
+}
+
+@book{MayClassifyingSpaces,
+  title={Classifying spaces and fibrations},
+  author={May, J Peter},
+  volume={155},
+  year={1975},
+  publisher={American Mathematical Soc.}
 }
 
 @book {MayConciseCourse,
