--- a/main.tex
+++ b/main.tex
@@ -44,6 +44,7 @@
 \todo[inline]{Be consistent about hyphens / en-dashes connecting ``$A$/$E$/$H_\infty$'' to ``ring''.}
 \todo[inline]{Use $\EinftyRings$ everywhere appropriate.}
 \todo[inline]{Use ${}^*$ and not ${}^\vee$ everywhere for linear dual.}
+\todo[inline]{Make sure adjoint pairs are written with the left-adjoint on the left and with its arrow on top.}
 
 
 
