fix text justification

--- a/tikzcdintertext.tex
+++ b/tikzcdintertext.tex
@@ -21,7 +21,7 @@
     \edef\mytikzcd@lmargin{\if@mparswitch\ifodd\thepage\space \Gm@lmargin\else \Gm@rmargin\fi\else \Gm@lmargin\fi}
     \@xp\mytikzcd@findcolumn\@xp{\tikzcd@savedpaths}{1}
 	\mytikzcd@addtosavedpaths{\unexpanded{\path[overlay] let \p1=(current page.west), \p2 =} (\noexpand\tikzcdmatrixname-\the\numexpr\pgfmatrixcurrentrow-1\relax-\mytikzcd@column), \noexpand\p3 = (\noexpand\tikzcdmatrixname-\the\pgfmatrixcurrentrow-1) in
-	node[anchor=west,text width=\textwidth,xshift=\mytikzcd@lmargin-2pt] at \unexpanded{(\x1,0.5*\y2+0.5*\y3)  {#2};}
+	node[anchor=west,xshift=\mytikzcd@lmargin-2pt] at \unexpanded{(\x1,0.5*\y2+0.5*\y3) {\parbox{\textwidth}{#2}};}
 	}
 }
 
