update grothendieck references

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -675,7 +675,7 @@ If $f_1, f_2\co V \to V'$ are maps of pointed formal varieties which agree mod $
 Any map $f\co \G' \to \G$ of pointed varieties which is a group homomorphism mod $p$ restricts to give a map $f^*\co PH^1_{dR}(\G/A) \to PH^1_{dR}(\G'/A)$.  Additionally, if $f_1$, $f_2$, and $f_3$ are three such maps of pointed varieties satisfying \[f_3 \equiv f_1 + f_2 \in \CatOf{FormalGroups}(\G'/p, \G/p),\] then $f_3^* = f_1^* + f_2^*$ as maps $PH^1_{dR}(\G/A) \to PH^1_{dR}(\G'/A)$. \qed
 \end{corollary}
 
-In the case that $k$ is a \emph{perfect} field, the ring $\W_p(k)$ of $p$--typical Witt vectors on $k$ is simultaneously torsion-free and universal among nilpotent thickenings of the residue field $k$.  This emboldens us to make the following definition:\footnote{There is a better definition one might hope for, which instead assigns to each potential thickening and lift a ``Dieudonne module'', and then work to show that they all arise as base-changes of this universal one.  This is possible and technically superior to the approach we are taking here~\cite[Theorem 5.1.6]{Katz},~\cite[Chapter 4]{Messing},~\cite{Grothendieck}.}
+In the case that $k$ is a \emph{perfect} field, the ring $\W_p(k)$ of $p$--typical Witt vectors on $k$ is simultaneously torsion-free and universal among nilpotent thickenings of the residue field $k$.  This emboldens us to make the following definition:\footnote{There is a better definition one might hope for, which instead assigns to each potential thickening and lift a ``Dieudonne module'', and then work to show that they all arise as base-changes of this universal one.  This is possible and technically superior to the approach we are taking here~\cite[Theorem 5.1.6]{Katz},~\cite[Chapter 4]{Messing},~\cite{GrothendieckCristaux}.}
 
 \begin{definition}{\cite[Section 5.5]{Katz}}
 Let $k$ be a perfect field of characteristic $p > 0$, and let $\G_0$ be a ($1$--dimensional) formal group over $k$.  Then, choose a lift $\G$ of $\G_0$ to $\W_p(k)$, and define the \index{Dieudonne module@Dieudonn\'e module!contravariant functor}\textit{(contravariant) Dieudonn\'e module} of $\G_0$ by $D^*(\G_0) := PH^1_{dR}(\G / \W_p(k))$.
@@ -693,7 +693,7 @@ Note that the module $D^*(\G_0)$ carries some natural operations:
 \end{itemize}
 With this, we come to the main theorem of this Lecture:
 
-\begin{theorem}[{\cite[Th\'eor\`eme 4.2]{Grothendieck}, \cite[Sections III.8-9]{Demazure}}]\label{MainContraDieudonneThm}
+\begin{theorem}[{\cite[Th\'eor\`eme 4.2]{GrothendieckCristaux}, \cite[Sections III.8-9]{Demazure}}]\label{MainContraDieudonneThm}
 The functor $D^*$ determines a contravariant equivalence of categories between smooth $1$--dimensional formal groups $\G_0$ over $k$ of finite $p$--height and \index{Dieudonne module@Dieudonn\'e module}\textit{Dieudonn\'e modules}, which are modules $M$ over the Cartier--Dieudonn\'e ring \[\Cart_p = \left. \W_p(k)\<F,V\> \middle/ \left( \begin{array}{c} FV = VF = p, \\ Fw = w^\phi F, \\ wV = Vw^\phi \end{array} \right) \right.\] which furthermore satisfy the following three technical conditions:
 \todo{Are these the correct technical conditions for the \emph{contravariant} Dieudonn\'e module?}
 \begin{itemize}
@@ -816,7 +816,7 @@ This latter sequence is a rigidified extension of $\G$ by $\G_a$, as in \Cref{Ex
 A coordinate $x$ on $\CP^\infty_E$ induces a sequence of isomorphisms \[\CatOf{FormalGroups}(BU_E, \G) \cong \CatOf{FormalSchemes}(\CP^\infty_E, \G) \stackrel{x}{\cong} \CatOf{FormalSchemes}(\A^1, \G) = C\G,\] which presents $E^* BU$ as the Witt Hopf algebra.  However, this isomorphism is not especially interesting: for one, it is \emph{highly} dependent upon the choice of coordinate, but also the far right-hand object has no dependence on $\CP^\infty_E$, and so the operations we have been studying---formal group auto- and endomorphisms of $\CP^\infty_E$, mainly---do not act, and this isomorphism cannot be equivariant in any useful sense.
 \end{remark}
 
-\begin{remark}[{\cite[Chapitre VI]{Grothendieck}}]
+\begin{remark}[{\cite[Chapitre VI]{GrothendieckCristaux}}]
 The contravariant Dieudonn\'e functor described above has a natural extension by choosing lifts over other pro-Artinian $k$--algebras, like the Lubin--Tate moduli stack of \Cref{LubinTateDefn}.  The resulting network of objects most naturally organizes into a sheaf over the \idxentry{crystalline site}, but it is possible in this setting to re-express such a sheaf as a quasi-coherent sheaf over the Lubin--Tate stack which is equipped with a flat connection, and it is additionally acted upon by the familiar operators $F$ and $V$.
 \end{remark}
 
@@ -1168,7 +1168,7 @@ We use this to continue the analysis of the case $q = 1$ and $j = \infty$, where
 
 There is a lot of structure visible in this collection of spectral sequences, as considered simultaneously.  Without further inspection, the spectral sequence at $j = \infty$ records that $\CP^\infty_K$ is a formal variety, and the spectral sequences at the finite values $1 \le j < \infty$ encode in their differentials the behavior of the map $p^j\co \Gamma \to \Gamma$ on functions---indeed, this appears to be the entire job of $a'_\emptyset$.  Lastly, we notice that the $E_\infty$ page of each finite-range spectral sequence includes into the spectral sequence at $j = \infty$, and moreover this filtration is exhaustive: every term in the $j = \infty$ spectral sequence appears at some $j < \infty$ stage.  Since this last property is about the $E_\infty$ pages, it is really a property of the formal group $\Gamma$, which we record in a definition:
 
-\begin{definition}[{\cite[Definition 4.1]{Grothendieck}}]
+\begin{definition}[{\cite[Definition 4.1]{GrothendieckCristaux}}]
 A \index{p divisible group@$p$--divisible group}\textit{$p$--divisible group}\footnote{Some like to call these \index{Barsotti--Tate group|see {$p$--divisible group}}\textit{Barsotti--Tate groups}, which is probably the better name, since ``$p$--divisible group'' sounds like a property rather than all this data.} over a field $k$ is a system $\mathbb G_j$ of finite group schemes and inclusions $i_k^j\co \mathbb G_k \to \mathbb G_j$ for $k < j$ which model the inclusions $\mathbb G_j[p^k] \subseteq \mathbb G_j$.
 \end{definition}
 
@@ -1176,7 +1176,7 @@ A \index{p divisible group@$p$--divisible group}\textit{$p$--divisible group}\fo
 A $p$--divisible group is said to be \index{p divisible group@$p$--divisible group!connected}\textit{connected} when its constituent subgroups $\mathbb G_j$ are infinitesimal thickenings of $\Spec k$.  An example of this is the sequence of torsion subgroups $\G[p^j]$ of a formal group $\G$.  A \emph{nonexample} of this is the sequence of constant group schemes $\G_j = S^1[p^j]$.
 \end{definition}
 
-\begin{lemma}[{\cite[Section 6.7]{Grothendieck}}]
+\begin{lemma}[{\cite[Section 6.7]{GrothendieckCristaux}}]
 Over a perfect field of positive characteristic $p$, a connected $p$--divisible group is equivalent to a smooth formal group of finite height.
 \end{lemma}
 \begin{proof}[Correspondence]
