--- a/finite.tex
+++ b/finite.tex
@@ -108,7 +108,7 @@ which shows that any descent datum (including those not arising, a priori, from 
 
 The following Theorem is the culmination of a typical first investigation of descent:\footnote{For details and additional context, see Vistoli~\cite[Section 4.2.1]{Vistoli}.  The story in the context of Hopf algebroids is also spelled out in detail by Miller~\cite{MillerSheavesGradings}.}
 
-\begin{theorem}[Grothendieck]\label{OriginalFFDescent}\citeme{Actually give an original citation for f.f.\ descent? Or just reference Vakil}
+\begin{theorem}[{\cite[Expos\'e VIII]{GrothendieckSGAI}}]\label{OriginalFFDescent}
 If $f\co R \to S$ is faithfully flat, the natural assignments
 \begin{center}
 \begin{tikzcd}
