--- a/quillen.tex
+++ b/quillen.tex
@@ -124,7 +124,7 @@ In the motivating case where $F \cong \A^n$ is given, we can define $M$ to be \[
 \vspace{-\baselineskip}
 \end{proof}
 
-\begin{corollary}
+\begin{corollary}[{\cite[Th\'eor\`eme III.2.1]}]
 \citeme{EGA? or something?}
 An $S$--point $x\co S \to X$ of a Noetherian scheme is formally smooth exactly when $T_x X$ is a free $S$--module and for any nilpotent thickenings $S \to \Spec B \to \Spec B'$ and any solid diagram
 \begin{center}
